3.5.0/_sources/gallery/subplots_axes_and_figures/fahrenheit_celsius_scales.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/fahrenheit_celsius_scales.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_fahrenheit_celsius_scales.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_fahrenheit_celsius_scales.py:


=================================
Different scales on the same axes
=================================

Demo of how to display two scales on the left and right y axis.

This example uses the Fahrenheit and Celsius scales.

.. GENERATED FROM PYTHON SOURCE LINES 10-47



.. image-sg:: /gallery/subplots_axes_and_figures/images/sphx_glr_fahrenheit_celsius_scales_001.png
   :alt: Two scales: Fahrenheit and Celsius
   :srcset: /gallery/subplots_axes_and_figures/images/sphx_glr_fahrenheit_celsius_scales_001.png, /gallery/subplots_axes_and_figures/images/sphx_glr_fahrenheit_celsius_scales_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np


    def fahrenheit2celsius(temp):
        """
        Returns temperature in Celsius given Fahrenheit temperature.
        """
        return (5. / 9.) * (temp - 32)


    def make_plot():

        # Define a closure function to register as a callback
        def convert_ax_c_to_celsius(ax_f):
            """
            Update second axis according with first axis.
            """
            y1, y2 = ax_f.get_ylim()
            ax_c.set_ylim(fahrenheit2celsius(y1), fahrenheit2celsius(y2))
            ax_c.figure.canvas.draw()

        fig, ax_f = plt.subplots()
        ax_c = ax_f.twinx()

        # automatically update ylim of ax2 when ylim of ax1 changes.
        ax_f.callbacks.connect("ylim_changed", convert_ax_c_to_celsius)
        ax_f.plot(np.linspace(-40, 120, 100))
        ax_f.set_xlim(0, 100)

        ax_f.set_title('Two scales: Fahrenheit and Celsius')
        ax_f.set_ylabel('Fahrenheit')
        ax_c.set_ylabel('Celsius')

        plt.show()

    make_plot()


.. _sphx_glr_download_gallery_subplots_axes_and_figures_fahrenheit_celsius_scales.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: fahrenheit_celsius_scales.py <fahrenheit_celsius_scales.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: fahrenheit_celsius_scales.ipynb <fahrenheit_celsius_scales.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
